// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application renders correctly 1`] = `
<div
  className="component"
>
  <div>
    <NavigationButton
      link="/"
    >
      <img
        src="/static/arrow-blue.png"
      />
      Tilbake
    </NavigationButton>
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Brukerinfo
    </h2>
    <ConnectedServiceComponent
      info={
        Object {
          "email": "",
          "inputEnabled": false,
          "name": "",
        }
      }
      loggedIn={false}
      onChange={[Function]}
    />
  </div>
  <div
    className="content"
  >
    <SelectContainer
      onChange={[Function]}
      ordered={true}
      selected={Array []}
    />
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Søknadstekst
    </h2>
    <TextArea
      onChange={[Function]}
      placeholder="Din søknadstext..."
      text="Test"
    />
  </div>
</div>
`;

exports[`Application renders correctly with user info 1`] = `
<div
  className="component"
>
  <div>
    <NavigationButton
      link="/"
    >
      <img
        src="/static/arrow-blue.png"
      />
      Tilbake
    </NavigationButton>
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Brukerinfo
    </h2>
    <ConnectedServiceComponent
      info={
        Object {
          "email": "email@example.com",
          "inputEnabled": false,
          "name": "Test User",
        }
      }
      loggedIn={true}
      onChange={[Function]}
    />
  </div>
  <div
    className="content"
  >
    <SelectContainer
      onChange={[Function]}
      ordered={true}
      selected={Array []}
    />
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Søknadstekst
    </h2>
    <TextArea
      onChange={[Function]}
      placeholder="Din søknadstext..."
      text="Test"
    />
  </div>
</div>
`;

exports[`Application updates info on onChange from SelectContainer 1`] = `
<div
  className="component"
>
  <div>
    <NavigationButton
      link="/"
    >
      <img
        src="/static/arrow-blue.png"
      />
      Tilbake
    </NavigationButton>
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Brukerinfo
    </h2>
    <ConnectedServiceComponent
      info={
        Object {
          "email": "email@example.com",
          "inputEnabled": false,
          "name": "Test Login",
        }
      }
      loggedIn={true}
      onChange={[Function]}
    />
  </div>
  <div
    className="content"
  >
    <SelectContainer
      onChange={[Function]}
      ordered={true}
      selected={
        Array [
          "Dotkom",
        ]
      }
    />
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Søknadstekst
    </h2>
    <TextArea
      onChange={[Function]}
      placeholder="Din søknadstext..."
      text="Test"
    />
  </div>
</div>
`;

exports[`Application updates info on onChange from login 1`] = `
<div
  className="component"
>
  <div>
    <NavigationButton
      link="/"
    >
      <img
        src="/static/arrow-blue.png"
      />
      Tilbake
    </NavigationButton>
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Brukerinfo
    </h2>
    <ConnectedServiceComponent
      info={
        Object {
          "email": "emaillogin@example.com",
          "inputEnabled": false,
          "name": "Post Login",
        }
      }
      loggedIn={true}
      onChange={[Function]}
    />
  </div>
  <div
    className="content"
  >
    <SelectContainer
      onChange={[Function]}
      ordered={true}
      selected={Array []}
    />
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Søknadstekst
    </h2>
    <TextArea
      onChange={[Function]}
      placeholder="Din søknadstext..."
      text="Test"
    />
  </div>
</div>
`;

exports[`Application updates user info on new props 1`] = `
<div
  className="component"
>
  <div>
    <NavigationButton
      link="/"
    >
      <img
        src="/static/arrow-blue.png"
      />
      Tilbake
    </NavigationButton>
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Brukerinfo
    </h2>
    <ConnectedServiceComponent
      info={
        Object {
          "email": "email2@example.com",
          "inputEnabled": false,
          "name": "Test2 User",
        }
      }
      loggedIn={true}
      onChange={[Function]}
    />
  </div>
  <div
    className="content"
  >
    <SelectContainer
      onChange={[Function]}
      ordered={true}
      selected={Array []}
    />
  </div>
  <div
    className="alternative"
  >
    <h2
      className="header"
    >
      Søknadstekst
    </h2>
    <TextArea
      onChange={[Function]}
      placeholder="Din søknadstext..."
      text="Test"
    />
  </div>
</div>
`;
